play-pit/Monitoring/Netdata/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: netdata
  labels:
    name: netdata
