play-pit/Monitoring/Netdata/ingress.yaml
---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: netdata-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
  - hosts:
    - netdata.kx-as-code.local
  rules:
  - host: netdata.kx-as-code.local
    http:
      paths:
       - path: /
         backend:
           serviceName: netdata
           servicePort: 19999

---
